--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.14.1",
+    "@mui/x-date-pickers-pro": "^8.14.1",
+    "dayjs": "^1.11.18",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-  "@vitejs/plugin-react": "5.0.0",
+    "@vitejs/plugin-react": "5.0.0",
     "typescript": "5.6.2",
     "vite": "5.2.0"
   }
